# langchain-academy

./: README.md  hello_world.py  pyproject.toml
module-0/: basics.ipynb
module-1/: agent-memory.ipynb  agent.ipynb  chain.ipynb  router.ipynb
module-1/studio/: agent.py  router.py
